prevent image from cropping when using original shape
Former-commit-id: 9831d9fa807d4248365402c7d2232e5a8d0e13b5

--- a/latestbuild/www/wp-content/themes/tpb/sass/style.scss
+++ b/latestbuild/www/wp-content/themes/tpb/sass/style.scss
@@ -502,6 +502,7 @@ img {
 
 			.image {
 				display: block;
+				margin: 0 auto;
 				position: relative;
 
 				border-radius: 90px;
